--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <header>
     <h1>Verificação de Entrega de Brinquedos</h1>
     <div class="banner">
-      <img src="img/briquedo 1.jpeg" alt="Brinquedo 1">
-      <img src="img/brinquedo 2.jpeg" alt="Brinquedo 2">
+      <img src="img/brinquedo 1.png" alt="Brinquedo 1">
+      <img src="img/briquedo 2.png" alt="Brinquedo 2">
     </div>
   </header>
   <main>
@@ -22,8 +22,8 @@
 
     <section class="galeria">
       <h2>Brinquedos em destaque</h2>
-      <img src="img/brinquedo 3.jpeg" alt="Brinquedo 3">
-      <img src="img/brinquedo 4.jpg" alt="Brinquedo 4">
+      <img src="img/briquedo 3.png" alt="Brinquedo 3">
+      <img src="img/brinquedo 4.png" alt="Brinquedo 4">
     </section>
   </main>
 
