botão de limpar o cep

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <label for="cep">Digite seu CEP:</label>
     <input type="text" id="cep" placeholder="Ex: 12345-678">
     <button onclick="verificarCEP()">Verificar</button>
+    <button onclick="limparDados()">Limpar</button>
+
 
     <div id="resultado"></div>
 
